overflow-fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@
 
 html,
 body {
+  overflow: hidden;
   padding: 0;
   margin: 0;
   color: var(--text-color);
